2004-12-08  Peter O'Gorman  <peter@pogma.com>
	    Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/FileUtils.pm (dir_has_case_matching_file,
	reset_dir_cache): New functions.
	* automake.in (handle_dist, require_file_internal): Use them, so
	that CHANGELOG is not confused with ChangeLog on case-insensitive
	case-preserving file systems.
	* tests/hfs.test: New file.
	* tests/Makefile.am (TESTS): Add hfs.test.

2004-12-08  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/mdate-sh: Don't use "set - x`$ls_command /`", as zsh mishandles
	the spaces inside $ls_command.  Problem reported by Loulou Pouchet in
	<http://lists.gnu.org/archive/html/autoconf/2004-12/msg00074.html>.
	Don't use "set - x"; plain "set x" is enough, and simplifies debugging.

2004-12-05  Toshio Kuratomi  <toshio@tiki-lounge.com>

	* lib/py-compile: Add --destdir switch to py-compile that takes a
	path argument that is not compiled into the file when byte compiling.
	* lib/am/python.am: Use the new py-compile arguments to not include
	DESTDIR in the byte compiled files.
	* tests/python12.test: Test that DESTDIR won't be byte compiled into
	python files.

2004-12-05  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (Clean): Typo.

	* doc/automake.texi: Use @acindex for Autoconf macros, and @vindex
	for variables (@cvindex was previously used for both).  Separate
	these two indices in the output.  Use @code, @file, and @command
	in @cindex lines wherever appropriate so they render nicely.

2004-12-05  Stepan Kasal  <kasal@ucw.cz>

	* doc/automake.texi (renamed objects, CVS): Typos.

2004-12-05  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (Flag Variables Ordering): New section.
	(User Variables, Program and Library Variables): @xref it.

2004-11-24  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (Conditional Subdirectories): More comments
	about non-distributed subdirectories.

	* Makefile.am (maintainer-clean): Check for unescaped @ in manual.
