@@ -5205,8 +5205,17 @@ Automake provides some minimal support for Java compilation with the
 @samp{JAVA} primary.
 
 Any @file{.java} files listed in a @samp{_JAVA} variable will be
-compiled with @code{JAVAC} at build time.  By default, @file{.class}
-files are not included in the distribution.
+compiled with @code{JAVAC} at build time.  By default, @file{.java}
+files are not included in the distribution, you should use the
+@code{dist_} prefix to distribute them.
+
+Here is a typical setup for distributing @file{.java} files and
+installing the @file{.class} files resulting from their compilation.
+
+@example
+javadir = $(datadir)/java
+dist_java_JAVA = a.java b.java @dots{}
+@end example
 
 @cindex @code{JAVA} restrictions
 @cindex Restrictions for @code{JAVA}
