@@ -1,3 +1,8 @@
+2004-12-09  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* doc/automake.texi (Java): Mention dist_ and add an example.
+	* tests/java.test: Do actually compile java files and run distcheck.
+
 2004-12-08  Peter O'Gorman  <peter@pogma.com>
 	    Alexandre Duret-Lutz  <adl@gnu.org>
 
